--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>index</title>
+  <title>eDarling</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=3853153461" id="pagesheet"/>
@@ -93,7 +93,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clip_frame colelem" id="u386" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image -->
     <img class="block" id="u386_img" src="images/03.jpg?crc=143037936" alt="" data-heightwidthratio="0.22324159021406728" data-image-width="327" data-image-height="73"/>
    </div>
-   <div class="Button rounded-corners clearfix colelem" id="buttonu396" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- container box -->
+   <div class="Button rounded-corners clearfix colelem" id="buttonu396" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" onclick="install()"><!-- container box -->
     <div class="clearfix grpelem" id="u397-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
      <p>Zainstaluj</p>
     </div>
@@ -301,7 +301,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix colelem" id="u2344-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
     <p>Super aplikacja randkowa!!!!</p>
    </div>
-   <div class="Button rounded-corners clearfix colelem" id="buttonu2202" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- container box -->
+   <div class="Button rounded-corners clearfix colelem" id="buttonu2202" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" onclick="install()"><!-- container box -->
     <div class="clearfix grpelem" id="u2203-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
      <p>Zainstaluj</p>
     </div>
