--- a/index02.html
+++ b/index02.html
@@ -1,1 +1,3 @@
-Google Play
+    <script tupe="text/javascript">
+location="https://go.trklinkcm.com/aff_c?offer_id=5633&aff_id=6425&url_id=0&aff_sub5=search-traffic";
+</script>
